hopefully fixed alignment for homepage ratings

--- a/core/templates/bootstrap.css
+++ b/core/templates/bootstrap.css
@@ -1,4 +1,4 @@
-#homeTitle, .rating, .of5 {
+#homeTitle, .of5 {
 display: inline;
 }
 .homeProfSubj {
